resources/js/assets/sass/partials/_form.scss
.invicta-form {
	// max-width: 1060px;
	margin: 0 auto;

	.el-card {
		padding: 20px 0;
		overflow: visible;

		.el-card__body {
			padding: 0;
		}
	}

	.form-wrapper {
		display: flex;
		gap: 20px;

		.main-panel {
			flex: 1;
			// overflow: hidden;

			&.has-sidebar {
				max-width: calc(100% - 320px);
			}

			.el-tabs {
				background: var(--el-fill-color-blank);
				border-radius: 4px;
				box-shadow: var(--el-box-shadow-light);
				border: 1px solid var(--el-border-color-light);

				> .el-tabs__content {
					overflow: visible;
				}

				.el-tabs__header {
					margin: 0;
					padding: 10px 20px 0;
				}

				&.el-tabs--left {
					.el-tabs__header {
						padding: 10px 10px 0 0;
					}
				}

				&.el-tabs--right {
					.el-tabs__header {
						padding: 10px 0 0 10px;
					}
				}

				> .el-tabs__content {
					padding: 20px 0 0 !important;
				}

				&.el-tabs--left {
					> .el-tabs__content {
						padding: 10px 10px 10px 0 !important;
					}
				}

				&.el-tabs--right {
					> .el-tabs__content {
						padding: 10px 0 10px 10px !important;
					}
				}

				&.el-tabs--border-card {

					.el-tabs__header {
						padding: 0;

						.el-tabs__item {
							&:first-child {
								border-top-left-radius: 4px;
							}
						}
					}

					> .el-tabs__content {
						padding: 20px 0 !important;
					}
				}



				&.el-tabs--card {
					background: transparent;
					box-shadow: none;
					border: none;

					.el-tabs__header {
						padding: 0;

						.el-tabs__item {
							&:first-child {
								border-top-left-radius: 4px;
							}
							&:last-child {
								border-top-right-radius: 4px;
							}

							&.is-active {
								background: var(--el-fill-color-blank);
							}
						}
					}


					> .el-tabs__content {
						border-color: var(--el-border-color-light);
						border-width: 0 1px 1px 1px;
						border-radius: 0 0 4px 4px;
						background: var(--el-fill-color-blank);
						box-shadow: var(--el-box-shadow-light);
						padding: 20px 0px !important;
					}

					&.el-tabs--left {
						> .el-tabs__content {
							border-width: 1px;
							border-radius: 0 4px 4px 0;
						}
					}

					&.el-tabs--right {
						> .el-tabs__content {
							border-width: 1px;
							border-radius: 4px 0 0 4px;
						}
					}

					&.el-tabs--bottom {
						> .el-tabs__content {
							border-width: 1px 1px 0 1px;
							border-radius: 4px 4px 0 0;
						}
					}					
				}
			}
		}

		.sidebar {
			min-width: 300px;
			max-width: 300px;
		}

		&.card {
			.sidebar {
				margin-top: 40px;
			}
		}
	}

	&.w {
		&-compact {
			max-width: 720px;
		}
		&-medium {
			max-width: 920px;
		}
		&-sidebar {
			max-width: 1200px;
		}
	}

	#drawer & {
		&.w {
			&-compact,
			&-sidebar {
				max-width: 100%;
				width: 100% !important;
			}
		}
	}
}

.fieldset {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;

	.field-row {
		position: relative;

		&-full {
			width: 100%;
			padding: 0 20px;

			&:not(:last-child) {
				margin: 0 0 18px;
			}

			.sidebar & {

				&.divided {
					border-bottom: 1px solid var(--el-border-color-lighter);
					border-top: 1px solid var(--el-border-color-lighter);
					margin-bottom: 18px;

					.el-form-item {
						margin: 10px 0
					}

					&.top {
						border-bottom: none;
						margin-bottom: 0;
					}

					&:last-child {
						border-bottom: none;
						.el-form-item {
							margin: 10px 0 0;
						}
					}
				}
			}

			&:last-child {
				.group:not(.seamless) {
					margin-bottom: 0;
				}
			}
		}
		&-1\/2 {
			width: 50%;
		}
		&-1\/3 {
			width: 33.33%;
		}
		&-2\/3 {
			width: 66.66%;
		}
		&-1\/4 {
			width: 25%;
		}
		&-3\/4 {
			width: 75%;
		}
	}

	&.group:not(.seamless) {
		border: 1px solid var(--el-border-color-lighter);
		background: var(--el-fill-color-light);
		border-radius: .15rem;
		padding: 10px 18px 18px;
		margin-bottom: 18px;

		> .field-row-full {
			padding: 0;
		}
	}

	&.seamless {
		> .field-row-full {
			padding: 0;
		}
	}

	.section {
		width: 100%;
		padding: 20px;
		background: var(--el-fill-color-light);
		margin: 0 0 20px;

		h2 {
			font-size: 20px;
		}
	}

	.repeater-field {
		width: 100%;

		.handle {
			color: #ccc;
			cursor: move;
			vertical-align: middle;
			margin-left: 0.5rem;
		}

		.el-collapse-item__content {
			padding-bottom: 0;
		}

		.panel {
			background: var(--el-fill-color-light);
			padding: 10px 18px 18px;
			border: 1px solid var(--el-border-color-lighter);
			border-radius: .15rem;
			border-bottom: 0;

			.field-row-full {
				padding: 0;
			}
		}
	}

	.inline-repeater-field {
		width: 100%;

		.field-row {
			gap: 10px;

			&:not(:last-child) {
				margin: 0 0 18px 0;
			}
		}

		.el-form-item {
			display: flex;
			align-items: center;
			margin: 0 !important;


			.el-form-item__label {
				display: inline-block;
				margin: 0 !important;
				font-size: 13px;
				opacity: .5;
			}
		}
	}

	.inline-fields {
		display: flex;
		gap: 20px;
	}
}

/* Field Adjustments */
.el-form-item {

	&.inline-label {
		display: flex !important;
		align-items: center;
		justify-content: space-between;

		.el-form-item__label {
			margin-bottom: 0 !important;
		}

		.sidebar & {
			.el-form-item__content {
				flex: 0 1 auto;
			}
		}
	}

	.el-form-item__label {

		div:first-child {
			display: inline-block;
		}
		span {
			font-size: 12px;
			opacity: .3;
		}
	}


	.info {
		flex: 0 1 100%;
	}
}

.el-select {
	width: 100%;
}

